@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
- <version>7.7</version>
+ <version>8.0</version>
  <dependencies>
   <dependency>profile-eea.jquery:27-dracula</dependency>
   <dependency>profile-eea.facetednavigation:default</dependency>
